# task1

build-client-server-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client  cmake_install.cmake  rules.ninja  server
build-client-server-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-703831183c834facfc08.json  cmakeFiles-v1-b39288cb9b7b85d874eb.json  codemodel-v2-c52b63269cafd4e7a014.json  index-2021-01-03T18-47-33-0645.json  target-client-Debug-30f75fb37a96b348933f.json  target-server-Debug-3e4ec421d099c74ac053.json
client/: CMakeLists.txt  clientsocket.h  main.cpp  thread.cpp
client-server/: CMakeLists.txt  readme.md
client-server/client/: clientsocket.cpp  clientsocket.h  main.cpp  worker.cpp  worker.h
client-server/server/: main.cpp  serversocket.cpp  serversocket.h
client-server/shared/: socketexception.cpp
client-server/src/client/: worker.cpp  worker.h
client-server/src/server/: main.cpp
client-server/src/shared/: socketexception.h
client/debug/: CMakeCache.txt  Makefile  client  client.cbp  cmake_install.cmake
client/debug/.cmake/api/v1/reply/: cache-v2-6e548e5d585ca376df53.json  cmakeFiles-v1-902755060f93e7b2a55d.json  codemodel-v2-7f35dc7ecb2301303360.json  index-2020-12-27T21-47-58-0074.json  target-client-Debug-e715bf51cd3c5482aad7.json
server/: CMakeLists.txt  main.cpp  serversocket.cpp  serversocket.h  serversocketexception.cpp  serversocketexception.h
server/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  server  server.cbp
server/debug/.cmake/api/v1/reply/: cache-v2-b00f08f00d2722cd377d.json  cmakeFiles-v1-1deb7dd4be03bf8c041c.json  (+3 more)
